# trainings_part_1_weather_station_simulator

./: Readme.md
tr1_0/: CMakeLists.txt  Readme.md
tr1_0/src/exceptions/: fixed_lines_file_writer_error.h
tr1_0/src/helpers/: FixedLinesFileWriter.h
tr1_0/src/ipc/: SharedSegmentMemoryIpc.cpp  SharedSegmentSemaphoreIpc.cpp
tr1_0/src/logger/: Log.h
tr1_0/src/proc_managers/: ReaderManager.cpp  ReaderManager.h  WriterManager.cpp  WriterManager.h
tr1_0/src/proc_managers/workers/: ExitWorker.cpp  ExitWorker.h  IWorker.h  PressureWorker.cpp  PressureWorker.h  TemperatureWorker.cpp  TemperatureWorker.h  WeatherWorker.cpp  WeatherWorker.h  Worker.cpp  Worker.h
tr1_0/test/: CMakeLists.txt
tr1_0/test/ipc/: SharedSegmentMemoryIpc_tests.cpp  SharedSegmentSemaphoreIpc_tests.cpp
tr1_0/test/mocks/: StdLibStaticMock.cpp  StdLibStaticMock.h  stdlib_mock.cpp
tr1_0/test/mocks/ipc/: IpcMock.h
tr1_0/test/mocks/proc_managers/workers/: WorkerMock.h
tr1_0/test/proc_managers/: ReaderManager_tests.cpp  WriterManager_tests.cpp
tr1_0/test/proc_managers/workers/: ExitWorker_tests.cpp  PressureWorker_tests.cpp  TemperatureWorker_tests.cpp  WeatherWorker_tests.cpp
tr1_1/: CMakeLists.txt  Readme.md  coverage.sh
tr1_1/src/exceptions/: sem_error.h
tr1_1/src/helpers/: FixedLinesFileWriter.cpp
tr1_1/src/ipc/: ISemaphoreIpc.h  SharedSegmentMemoryIpc.cpp  SharedSegmentMemoryIpc.h  SharedSegmentSemaphoreIpc.h
tr1_1/src/logger/: Log.cpp
tr1_1/src/proc_managers/workers/: ExitWorker.h  WeatherData.h  (+3 more)
tr1_1/test/: CMakeLists.txt
tr1_1/test/mocks/: StdLibStaticMock.h  stdlib_mock.cpp
tr1_1/test/proc_managers/: ReaderManager_tests.cpp  WriterManager_tests.cpp
tr1_2/: Readme.md
tr1_2/src/: CMakeLists.txt
tr1_2/src/exceptions/: ftok_error.h  pipe_error.h  shm_error.h
tr1_2/src/ipc/: EPipeMode.h  EUsageShmSegment.h  IIpc.h  PipeStreamIpc.cpp  PipeStreamIpc.h
tr1_2/src/logger/: Log.h
tr1_2/src/proc_managers/: IProcManager.h  ReaderManager.cpp  WriterManager.h
tr1_2/src/proc_managers/workers/: PressureWorker.h  WeatherData.cpp
tr1_2/test/helpers/: FixedLinesFileWriter_tests.cpp
tr1_2/test/ipc/: PipeStreamIpc_tests.cpp  SharedSegmentMemoryIpc_tests.cpp  SharedSegmentSemaphoreIpc_tests.cpp
tr1_2/test/mocks/: StdLibStaticMock.cpp  StdLibStaticMock.h  stdlib_mock.cpp
(+9 files in other folders)
